--- a/revolv/static/css/style.css
+++ b/revolv/static/css/style.css
@@ -1125,3 +1125,13 @@ margin-right: -66px !important; }
 .slick-next:before {
 	color: black;
 }
+@media (max-width: 767px) {
+    .testimonial-desktop {
+         display: none;
+     }
+ }
+@media (min-width: 768px) {
+	.testimonial-mobile {
+		display: none;
+	}
+}
